# agentic

./: .gitignore  ADVERSARIAL-REVIEW-2.md  ADVERSARIAL-REVIEW.md  CLAUDE.md  Cargo.toml  DESIGN.md  IDEA.md  README.md  architect.md  planning-protocol.md  project-config.md
.claude/: project-config.md
agents/: config-gen.md  dev.md  reviewer.md  verifier.md
claude-code/: CLAUDE-user-profile.md  CLAUDE.md  architect.md  challenger.md  code-analyst.md  code-quality-auditor.md  data-analyst.md  dev.md  documentation-writer.md  orchestration-rules.md  qa.md  setup.sh
claude-code-v2/: CLAUDE.md
cli/: CLAUDE.md  Cargo.toml  coding-standards.md  planning-protocol.md
cli/agents/: dev.md  reviewer.md
cli/src/: main.rs
global/: CLAUDE.md
orchestrator/: Cargo.toml  README.md  install.sh
orchestrator/migrations/: 001_initial.sql
orchestrator/plugin/: .mcp.json
orchestrator/plugin/.claude-plugin/: plugin.json
orchestrator/plugin/hooks/: hooks.json
orchestrator/src/: cli.rs  config.rs  lib.rs  main.rs  protocol.rs
orchestrator/src/daemon/: alerts.rs  automation.rs  mod.rs  notifications.rs
orchestrator/src/hook/: activity.rs  mod.rs  sendmessage.rs  session.rs  task.rs
orchestrator/src/mcp/: mod.rs  recover.rs
orchestrator/src/store/: agents.rs  alerts.rs  db.rs  events.rs  messages.rs  mod.rs  notifications.rs  tasks.rs
orchestrator/src/tui/: mod.rs
orchestrator/src/tui/views/: inspector.rs  mod.rs  tree.rs
orchestrator/tests/: agent_lifecycle.rs  integration.rs  message_delivery.rs  task_coordination.rs
orchestrator/tests/common/: mod.rs
(+11 files in other folders)
