[package]
name = "agentic"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
